# e-certify

./: .gitignore  Anchor.toml  Cargo.toml  FINAL_SUMMARY.md  README.md  SETUP-INSTRUCTIONS.md  build-and-deploy.ps1  build-and-test.ps1  codama.js  deploy-program.ps1  deploy-program.sh  deploy.bat  deploy.sh  fix-recursive-policy.sql  fix-rls-immediately.sql  fix-rls-profiles.sql  middleware.ts  next.config.mjs  package-lock.json  package-lock.root.bak  package.json  sample_students.csv  start-demo.sh  supabase-jwt-hook-function.sql  supabase-schema.sql  supabase-set-admin.sql  tailwind.config.ts  test-and-deploy.sh  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/(marketing)/: layout.tsx  page.tsx
app/(platform)/: layout.tsx
app/components/: AppHeader.tsx  AppTabs.tsx  Avatar.tsx  AvatarRow.tsx  BestInstructors.tsx  CurrentActivity.tsx  DashboardBanner.tsx  EnhancedBannerHero.tsx  PlatformHeader.tsx  PopularCourses.tsx  SearchPanel.tsx  Shell.tsx  Sidebar.tsx  SkillsPassport.tsx  UnifiedHeader.tsx  UnifiedSidebar.tsx  UserPanel.tsx  VerificationPage.tsx  WalletBar.tsx  auth-button.tsx  auth-gate.tsx  banner-hero.tsx  course-card.tsx  enroll-button.tsx  mentor-card.tsx  progress-chart.tsx  (+1 more)
credify_program/: Cargo.toml
frontend/: README.md  next.config.js  package-lock.json  package.json  start-frontend.ps1  tailwind.config.js  tsconfig.json
lib/: mock-data.ts
mock/: mock-data.json
program/: Cargo.toml
programs/credify_program/: Cargo.toml
programs/credify_program/src/: lib.rs
ts/: adminMint.ts  mockServer.ts
(+65 files in other folders)
