[package]
name = "credify_program"
version = "0.1.0"
edition = "2021"

[lib]
name = "credify_program"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
spl-account-compression = "^0.2.0"
mpl-bubblegum = "^2.1.1"

